--- a/index.html
+++ b/index.html
@@ -30,34 +30,54 @@
         </ul>
       </nav>
     </header>
+
+    <!-- hero section -->
+    <section id="hero">
+      <img src="./images/illustration-intro.png" alt="" class="hero-image">
+      <h3>All your files in one secure location, accessible anywhere.</h3>
+      <p>
+        Fylo stores all your most important files in one secure location. Access them wherever 
+        you need, share and collaborate with friends family, and co-workers.
+      </p>
+      <button>Get Started</button>
+    </section>
+    <!-- end of hero section -->
+
+    <section id="services">
+      <div class="files">
+        <img src="./images/icon-access-anywhere.svg" alt="file">
+        <h3>Access your files, anywhere.</h3>
+        <p>
+          The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.
+        </p>
+      </div>
+      <div class="files">
+        <img src="./images/icon-security.svg" alt="file">
+        <h3> Security you can trust.</h3>
+        <p>
+          2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.
+        </p>
+      </div>
+      <div class="files">
+        <img src="./images/icon-collaboration.svg" alt="file">
+        <h3>Real-time collaboration.</h3>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. 
+          No email attachments required.
+        </p>
+      </div>
+      <div class="files">
+        <img src="./images/icon-any-file.svg" alt="file">
+        <h3>Store any type of file.</h3>
+        <p> 
+         Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+         file types to be securely stored and shared.
+        </p>
+      </div>
+    </section>
   </div>
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
-
-  Get Started
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
 
   Stay productive, wherever you are
 
