--- a/index.html
+++ b/index.html
@@ -44,22 +44,25 @@
     <!-- end of hero section -->
 
     <section id="services">
-      <div class="files">
-        <img src="./images/icon-access-anywhere.svg" alt="file">
-        <h3>Access your files, anywhere.</h3>
-        <p>
-          The ability to use a smartphone, tablet, or computer to access your account means your 
-          files follow you everywhere.
-        </p>
+      <div class="row">
+        <div class="files">
+          <img src="./images/icon-access-anywhere.svg" alt="file">
+          <h3>Access your files, anywhere.</h3>
+          <p>
+            The ability to use a smartphone, tablet, or computer to access your account means your 
+            files follow you everywhere.
+          </p>
+        </div>
+        <div class="files">
+          <img src="./images/icon-security.svg" alt="file">
+          <h3> Security you can trust.</h3>
+          <p>
+            2-factor authentication and user-controlled encryption are just a couple of the security 
+            features we allow to help secure your files.
+          </p>
+        </div>
       </div>
-      <div class="files">
-        <img src="./images/icon-security.svg" alt="file">
-        <h3> Security you can trust.</h3>
-        <p>
-          2-factor authentication and user-controlled encryption are just a couple of the security 
-          features we allow to help secure your files.
-        </p>
-      </div>
+     <div class="row">
       <div class="files">
         <img src="./images/icon-collaboration.svg" alt="file">
         <h3>Real-time collaboration.</h3>
@@ -76,6 +79,7 @@
          file types to be securely stored and shared.
         </p>
       </div>
+     </div>
     </section>
   </div>
 
