--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <!-- end of hero section -->
 
     <section id="services">
-      <div class="row">
         <div class="files">
           <img src="./images/icon-access-anywhere.svg" alt="file">
           <h3>Access your files, anywhere.</h3>
@@ -61,8 +60,6 @@
             features we allow to help secure your files.
           </p>
         </div>
-      </div>
-     <div class="row">
       <div class="files">
         <img src="./images/icon-collaboration.svg" alt="file">
         <h3>Real-time collaboration.</h3>
@@ -79,38 +76,74 @@
          file types to be securely stored and shared.
         </p>
       </div>
-     </div>
+    </section>
+<!-- about section -->
+    <section id="about">
+      <div class="about-image">
+        <img src="./images/illustration-stay-productive.png" alt="">
+      </div>
+      <div class="about-text">
+        <h3>Stay productive, wherever you are</h3>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+          storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+          attachments required.
+        </p>
+        <div class="about-link">
+          <span>See how Fylo works</span>
+          <img src="./images/icon-arrow.svg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonials">
+      <img src="./images/bg-quotes.png" alt="">
+      <div class="row">
+        <div class="col">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="profile">
+            <img src="./images/profile-1.jpg" alt="">
+            <div class="image-text">
+              <h3>Satish Patel</h3>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="profile">
+            <img src="./images/profile-2.jpg" alt="">
+            <div class="image-text">
+              <h3> Bruce McKenzie</h3>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <p>
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.
+          </p>
+          <div class="profile">
+            <img src="./images/profile-3.jpg" alt="">
+            <div class="image-text">
+              <h3>Iva Boyd</h3>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
   Get early access today
 
   It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
