working on the pages

--- a/index.html
+++ b/index.html
@@ -143,13 +143,21 @@
         </div>
       </div>
     </section>
+
+    <section id="banner">
+      <div class="banner-text">
+        <h3>Get early access today</h3>
+        <p>
+          It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+          questions, our support team would be happy to help you.
+        </p>
+      </div>
+      <form  id="form">
+        <input type="text" placeholder="email@example.com">
+        <button class="form-button">Get Started For Free</button>
+      </form>
+    </section>
   </div>
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
 
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
   dolore magna aliqua
