working on the page responsiveness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
-
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./fontawesome-free-5.14.0-web/css/all.min.css">
   <link rel="stylesheet" href="./style.css">
@@ -23,13 +23,14 @@
       <div class="logo">
         <img src="./images/logo.svg" alt="logo">
       </div>
-      <nav>
+      <nav class="nav">
         <ul>
           <li><a href="#">Features</a></li>
           <li><a href="#">Team</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
+      <i class="fas fa-bars" id="toggleBtn"></i>
     </header>
 
     <!-- hero section -->
@@ -208,11 +209,12 @@
     </footer>
   </div>
 
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Dev Enock</a>.
     </p>
-  </footer>
+  </footer> -->
+  <script src="./main.js"></script>
 </body>
 </html>
