--- a/index.html
+++ b/index.html
@@ -1,220 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./fontawesome-free-5.14.0-web/css/all.min.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./fontawesome-free-5.14.0-web/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title> Fylo Landing Page</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container">
-    <header>
-      <div class="logo">
-        <img src="./images/logo.svg" alt="logo">
-      </div>
-      <nav class="nav">
-        <ul>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Sign In</a></li>
-        </ul>
-      </nav>
-      <i class="fas fa-bars" id="toggleBtn"></i>
-    </header>
-
-    <!-- hero section -->
-    <section id="hero">
-      <img src="./images/illustration-intro.png" alt="" class="hero-image">
-      <h3>All your files in one secure location, accessible anywhere.</h3>
-      <p>
-        Fylo stores all your most important files in one secure location. Access them wherever 
-        you need, share and collaborate with friends family, and co-workers.
-      </p>
-      <button>Get Started</button>
-    </section>
-    <!-- end of hero section -->
-
-    <section id="services">
-        <div class="files">
-          <img src="./images/icon-access-anywhere.svg" alt="file">
-          <h3>Access your files, anywhere.</h3>
-          <p>
-            The ability to use a smartphone, tablet, or computer to access your account means your 
-            files follow you everywhere.
-          </p>
-        </div>
-        <div class="files">
-          <img src="./images/icon-security.svg" alt="file">
-          <h3> Security you can trust.</h3>
-          <p>
-            2-factor authentication and user-controlled encryption are just a couple of the security 
-            features we allow to help secure your files.
-          </p>
-        </div>
-      <div class="files">
-        <img src="./images/icon-collaboration.svg" alt="file">
-        <h3>Real-time collaboration.</h3>
-        <p>
-          Securely share files and folders with friends, family and colleagues for live collaboration. 
-          No email attachments required.
-        </p>
-      </div>
-      <div class="files">
-        <img src="./images/icon-any-file.svg" alt="file">
-        <h3>Store any type of file.</h3>
-        <p> 
-         Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-         file types to be securely stored and shared.
-        </p>
-      </div>
-    </section>
-<!-- about section -->
-    <section id="about">
-      <div class="about-image">
-        <img src="./images/illustration-stay-productive.png" alt="">
-      </div>
-      <div class="about-text">
-        <h3>Stay productive, wherever you are</h3>
-        <p>
-          Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-          storage needs.
-        </p>
-        <p>
-          Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-          attachments required.
-        </p>
-        <div class="about-link">
-          <span>See how Fylo works</span>
-          <img src="./images/icon-arrow.svg" alt="">
-        </div>
-      </div>
-    </section>
-
-    <section id="testimonials">
-      <img src="./images/bg-quotes.png" alt="">
-      <div class="row">
-        <div class="col">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.
-          </p>
-          <div class="profile">
-            <img src="./images/profile-1.jpg" alt="">
-            <div class="image-text">
-              <h3>Satish Patel</h3>
-              <p>Founder & CEO, Huddle</p>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="./images/logo.svg" alt="logo">
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.
-          </p>
-          <div class="profile">
-            <img src="./images/profile-2.jpg" alt="">
-            <div class="image-text">
-              <h3> Bruce McKenzie</h3>
-              <p>Founder & CEO, Huddle</p>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </nav>
+            <i class="fas fa-bars" id="toggleBtn"></i>
+        </header>
+
+        <!-- hero section -->
+        <section id="hero">
+            <img src="./images/illustration-intro.png" alt="" class="hero-image">
+            <h3>All your files in one secure location, accessible anywhere.</h3>
+            <p>
+                Fylo stores all your most important files in one secure location. Access them wherever
+                you need, share and collaborate with friends family, and co-workers.
+            </p>
+            <button>Get Started</button>
+        </section>
+        <!-- end of hero section -->
+
+        <section id="services">
+            <div class="files">
+                <img src="./images/icon-access-anywhere.svg" alt="file">
+                <h3>Access your files, anywhere.</h3>
+                <p>
+                    The ability to use a smartphone, tablet, or computer to access your account means your
+                    files follow you everywhere.
+                </p>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-            become a well-oiled collaboration machine.
-          </p>
-          <div class="profile">
-            <img src="./images/profile-3.jpg" alt="">
-            <div class="image-text">
-              <h3>Iva Boyd</h3>
-              <p>Founder & CEO, Huddle</p>
+            <div class="files">
+                <img src="./images/icon-security.svg" alt="file">
+                <h3> Security you can trust.</h3>
+                <p>
+                    2-factor authentication and user-controlled encryption are just a couple of the security
+                    features we allow to help secure your files.
+                </p>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
+            <div class="files">
+                <img src="./images/icon-collaboration.svg" alt="file">
+                <h3>Real-time collaboration.</h3>
+                <p>
+                    Securely share files and folders with friends, family and colleagues for live collaboration.
+                    No email attachments required.
+                </p>
+            </div>
+            <div class="files">
+                <img src="./images/icon-any-file.svg" alt="file">
+                <h3>Store any type of file.</h3>
+                <p>
+                    Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+                    file types to be securely stored and shared.
+                </p>
+            </div>
+        </section>
+        <!-- about section -->
+        <section id="about">
+            <div class="about-image">
+                <img src="./images/illustration-stay-productive.png" alt="">
+            </div>
+            <div class="about-text">
+                <h3>Stay productive, wherever you are</h3>
+                <p>
+                    Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+                    storage needs.
+                </p>
+                <p>
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No email
+                    attachments required.
+                </p>
+                <div class="about-link">
+                    <span>See how Fylo works</span>
+                    <img src="./images/icon-arrow.svg" alt="">
+                </div>
+            </div>
+        </section>
 
-    <section id="banner">
-      <div class="banner-text">
-        <h3>Get early access today</h3>
-        <p>
-          It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-          questions, our support team would be happy to help you.
-        </p>
-      </div>
-      <form  id="form">
-        <input type="text" placeholder="email@example.com">
-        <button class="form-button">Get Started For Free</button>
-      </form>
-    </section>
+        <section id="testimonials">
+            <img src="./images/bg-quotes.png" alt="">
+            <div class="row">
+                <div class="col">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="profile">
+                        <img src="./images/profile-1.jpg" alt="">
+                        <div class="image-text">
+                            <h3>Satish Patel</h3>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="profile">
+                        <img src="./images/profile-2.jpg" alt="">
+                        <div class="image-text">
+                            <h3> Bruce McKenzie</h3>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="profile">
+                        <img src="./images/profile-3.jpg" alt="">
+                        <div class="image-text">
+                            <h3>Iva Boyd</h3>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <footer id="footer">
-      <div class="description">
-        <img src="./images/logo.svg" alt="">
-        <div class="location">
-          <img src="./images/icon-location.svg" alt="">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-            dolore magna aliqua
-          </p>
-        </div>
-      </div>
-      <div class="contacts">
-        <a href="+1-543-123-4567">
-          <img src="./images/icon-phone.svg" alt="">
-          <span>+1-543-123-4567</span>
-        </a>
-        <a href="example@fylo.com">
-          <img src="./images/icon-email.svg" alt="">
-          <span>example@fylo.com</span>
-        </a>
-      </div>
-      <div class="links">
-        <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </div>
-      <div class="links">
-        <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
-        </ul>
-      </div>
-      <!-- social icons -->
-      <div class="icons">
-        <div class="links">
-          <ul>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </div>
+        <section id="banner">
+            <div class="banner-text">
+                <h3>Get early access today</h3>
+                <p>
+                    It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+                    questions, our support team would be happy to help you.
+                </p>
+            </div>
+            <form id="form">
+                <input type="text" placeholder="email@example.com">
+                <button class="form-button">Get Started For Free</button>
+            </form>
+        </section>
 
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Dev Enock</a>.
-    </p>
-  </footer> -->
-  <script src="./main.js"></script>
+        <footer id="footer">
+            <div class="description">
+                <img src="./images/logo.svg" alt="">
+                <div class="location">
+                    <img src="./images/icon-location.svg" alt="">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua
+                    </p>
+                </div>
+            </div>
+            <div class="contacts">
+                <a href="+1-543-123-4567">
+                    <img src="./images/icon-phone.svg" alt="">
+                    <span>+1-543-123-4567</span>
+                </a>
+                <a href="example@fylo.com">
+                    <img src="./images/icon-email.svg" alt="">
+                    <span>example@fylo.com</span>
+                </a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+            <!-- social icons -->
+            <div class="icons">
+                <div class="links">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="./main.js"></script>
 </body>
+
 </html>
