--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">
+            <a href="index.html" class="logo">
                 <img src="./images/logo.svg" alt="logo">
-            </div>
+            </a>
             <nav class="nav">
                 <ul>
                     <li><a href="#">Features</a></li>
