--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
             font-size: 11px;
             text-align: center;
         }
-
+        
         .attribution a {
             color: hsl(228, 45%, 44%);
         }
@@ -35,6 +36,8 @@
 
 <body>
     <div class="container">
+
+        <!-- header section -->
         <header>
             <a href="index.html" class="logo">
                 <img src="./images/logo.svg" alt="logo">
@@ -49,52 +52,54 @@
             <i class="fas fa-bars" id="toggleBtn"></i>
         </header>
 
+        <!-- end of header section -->
+
         <!-- hero section -->
         <section id="hero">
             <img src="./images/illustration-intro.png" alt="" class="hero-image">
             <h3>All your files in one secure location, accessible anywhere.</h3>
             <p>
-                Fylo stores all your most important files in one secure location. Access them wherever
-                you need, share and collaborate with friends family, and co-workers.
+                Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.
             </p>
             <button>Get Started</button>
         </section>
         <!-- end of hero section -->
 
+        <!-- services section -->
         <section id="services">
             <div class="files">
                 <img src="./images/icon-access-anywhere.svg" alt="file">
                 <h3>Access your files, anywhere.</h3>
                 <p>
-                    The ability to use a smartphone, tablet, or computer to access your account means your
-                    files follow you everywhere.
+                    The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
                 </p>
             </div>
             <div class="files">
                 <img src="./images/icon-security.svg" alt="file">
                 <h3> Security you can trust.</h3>
                 <p>
-                    2-factor authentication and user-controlled encryption are just a couple of the security
-                    features we allow to help secure your files.
+                    2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
                 </p>
             </div>
             <div class="files">
                 <img src="./images/icon-collaboration.svg" alt="file">
                 <h3>Real-time collaboration.</h3>
                 <p>
-                    Securely share files and folders with friends, family and colleagues for live collaboration.
-                    No email attachments required.
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
                 </p>
             </div>
             <div class="files">
                 <img src="./images/icon-any-file.svg" alt="file">
                 <h3>Store any type of file.</h3>
                 <p>
-                    Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
-                    file types to be securely stored and shared.
+                    Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.
                 </p>
             </div>
         </section>
+
+        <!-- end of services section -->
+
+
         <!-- about section -->
         <section id="about">
             <div class="about-image">
@@ -103,12 +108,10 @@
             <div class="about-text">
                 <h3>Stay productive, wherever you are</h3>
                 <p>
-                    Never let location be an issue when accessing your files. Fylo has you covered for all of your file
-                    storage needs.
+                    Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.
                 </p>
                 <p>
-                    Securely share files and folders with friends, family and colleagues for live collaboration. No email
-                    attachments required.
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
                 </p>
                 <div class="about-link">
                     <span>See how Fylo works</span>
@@ -117,13 +120,17 @@
             </div>
         </section>
 
+        <!-- end of about section -->
+
+
+        <!-- testimonials section -->
+
         <section id="testimonials">
             <img src="./images/bg-quotes.png" alt="">
             <div class="row">
                 <div class="col">
                     <p>
-                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-                        become a well-oiled collaboration machine.
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
                     </p>
                     <div class="profile">
                         <img src="./images/profile-1.jpg" alt="">
@@ -135,8 +142,7 @@
                 </div>
                 <div class="col">
                     <p>
-                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-                        become a well-oiled collaboration machine.
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
                     </p>
                     <div class="profile">
                         <img src="./images/profile-2.jpg" alt="">
@@ -148,8 +154,7 @@
                 </div>
                 <div class="col">
                     <p>
-                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-                        become a well-oiled collaboration machine.
+                        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
                     </p>
                     <div class="profile">
                         <img src="./images/profile-3.jpg" alt="">
@@ -162,12 +167,15 @@
             </div>
         </section>
 
+        <!-- end of testimonials section -->
+
+
+        <!-- banner section-->
         <section id="banner">
             <div class="banner-text">
                 <h3>Get early access today</h3>
                 <p>
-                    It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
-                    questions, our support team would be happy to help you.
+                    It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.
                 </p>
             </div>
             <form id="form">
@@ -176,14 +184,15 @@
             </form>
         </section>
 
+        <!-- end of banner -->
+
         <footer id="footer">
             <div class="description">
                 <img src="./images/logo.svg" alt="">
                 <div class="location">
                     <img src="./images/icon-location.svg" alt="">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                     </p>
                 </div>
             </div>
