--- a/index.html
+++ b/index.html
@@ -222,14 +222,10 @@
                 </ul>
             </div>
             <!-- social icons -->
-            <div class="icons">
-                <div class="links">
-                    <ul>
-                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    </ul>
-                </div>
+            <div class="social-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
             </div>
         </footer>
     </div>
